src/mysql/mysql_xx_Pod_busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: mysql
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: busybox
    resources: {}
    ports:
    - containerPort: 80
    command:
        - /bin/sh
        - '-ec'
        - while true; do sleep 30; done
        - '--restart=Never'
