src/mysql/mysql_xx_Gateway_TCPRoute_ReferenceGrant.yaml
# Purpose : Form Kubernetes Service Object
# Required Kubernetes API Resource
#   NAME       SHORTNAMES  APIVERSION   NAMESPACED   KIND
#   services   svc         v1           true         Service
#
apiVersion: v1
kind: Service
metadata:
  name: nodeport-tcp-3306-app=mysql            # Set API resource
  namespace: mysql                             # Object is in effect in Namespace "mysql"     
  annotations:
    creator/author: "Thomas Rausch, Atos"      # Set creator/author
    version: "2025-12-03"                      # Set version
    description: "Form Service object of type 'NodePort'. Must create Service of type 'NodePort' as Gateway creates a Service of type 'LoadBalancer'. Services of type 'LoadBalancer' are not supported on bare metal Kubernetes. A Service of type 'LoadBalancer' on bare metal Kubernetes will not receive an external IP."  # Set description
spec:
  selector:
    app: mysql                                 # Match application pod labels
  ports:
    - protocol: TCP                            # Set protocol and ports
      port: 3306 # Service port
      targetPort: 3306 # Pod port
  type: NodePort
---
# Purpose : Form Kubernetes ReferenceGrant Object
# Required Kubernetes API Resource
#   NAME              SHORTNAMES  APIVERSION                           NAMESPACED   KIND
#   referencegrants   refgrant     ateway.networking.k8s.io/v1beta1    true         ReferenceGrant
#
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: tcproute-default-to-mysql
  namespace: mysql
  annotations:
    creator/author: "Thomas Rausch, Atos"          # Set creator/author
    version: "2025-12-03"                          # Set version
    description: "Allows TCPRoute from Gateway to Service in Namespace 'mysql'"                                      # Set description
    reference: "https://docs.tigera.io/calico/latest/networking/ingress-gateway/tutorial-ingress-gateway-canary"     # Set reference
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: TCPRoute
    namespace: default
  to:
  - group: ""
    kind: Service
---
# PreRequisite - GatewayClass ""
#   NAME             SHORTNAMES   APIVERSION                     NAMESPACED   KIND
#   gatewayclasses   gc           gateway.networking.k8s.io/v1   false        GatewayClass
#
#
#   apiVersion: gateway.networking.k8s.io/v1
#   kind: GatewayClass
#   metadata:
#     name: tigera-gateway-class
#   spec:
#     controllerName: gateway.envoyproxy.io/gatewayclass-controller
#     parametersRef:
#       group: gateway.envoyproxy.io
#       kind: EnvoyProxy
#       name: envoy-proxy-config
#       namespace: tigera-gateway
