src/mysql/my_sql_05_Ingress-GKE.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql
spec:
  defaultBackend:
    service:
      name: mysql
      port:
        number: 3306
