src/mysql/mysql_05_Ingress-GKE.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  defaultBackend:
    service:
      name: mysql
      port:
        number: 3306
