src/mysql/mysql_07_Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  namespace: mysql
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/author: thomas-rausch
  args:
    - /nginx-ingress-controller
    - --tcp-services-configmap=mysql/tcp-services
spec:
  ingressClassName: nginx
  rules:
  - host: mysql.master-node
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mysql
            port:
              number: 3306
