src/mysql/mysql_NetworkPolicy_ deny-all-ingress-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
  generation: 1
  name: deny-all-ingress-mysql
  namespace: mysql
spec:
  podSelector: {}
  policyTypes:
  - Ingress
