src/mysql/mysql_xx_NetworkPolicy_allow-ingress-egress-within-namespace-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-egress-within-namespace-mysql
  namespace: mysql # The namespace where this policy applies (where the target pods reside)
spec:
  podSelector: {}  # Selects all pods in the namespace
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mysql # Label of the source namespace
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mysql # Label of the destination namespace
