src/mysql/mysql_xx_NetworkPolicy_allow-ingress-ip-192_168_0_*-port-3306_label-app=mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  generation: 2
  name: allow-ingress-ip-192_168_0_*-port-3306_label-app=mysql
  namespace: mysql                  # Form in namespace "mysql"
spec:
  ingress:
    - from:
        - ipBlock:
            cidr: 192.168.0.0/24    # Set IP CIDR 192.168.0.*
        # - namespaceSelector:
        #    matchExpressions:
        #      - key: namespace
        #        operator: In
        #        values:
        #          - default
        #          - kube-system
        #          - mysql
      ports:
        - port: 3306
          protocol: TCP
  podSelector:
    matchLabels:
      app: mysql                     # Select pods with label "app=mysql"
  policyTypes:
    - Ingress
