src/mysql/mysql_xx_NetworkPolicy_deny-all-ingress-ns-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
  generation: 1
  name: deny-all-ingress-ns-mysql
  namespace: mysql
spec:
  podSelector: {}
  policyTypes:
  - Ingress
